--- a/Stylist/Base.lproj/Main.storyboard
+++ b/Stylist/Base.lproj/Main.storyboard
@@ -383,7 +383,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="8vQ-e4-Iq2" kind="modal" id="ZVg-TD-1de"/>
+                                    <segue destination="8vQ-e4-Iq2" kind="modal" identifier="userSettingVCtoVC" id="ZVg-TD-1de"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="hGw-mH-YHw">
@@ -393,7 +393,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="vae-nM-WaS" kind="unwind" unwindAction="unwindToTrend:" id="sxl-oz-bAV"/>
+                                    <segue destination="8vQ-e4-Iq2" kind="modal" id="qXM-AK-tWs"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="xFC-9k-3jk">
@@ -409,7 +409,7 @@
                                 <rect key="frame" x="112" y="94" width="156" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress"/>
                                 <connections>
                                     <outlet property="delegate" destination="x8p-fI-vlR" id="fMv-2q-7gX"/>
                                 </connections>
@@ -531,7 +531,7 @@
                         <outlet property="sexSelect" destination="Lgt-Pu-LuH" id="hv5-bT-k0c"/>
                         <outlet property="tapGesture" destination="FTy-27-tfP" id="Hzo-Vg-o7r"/>
                         <outlet property="usernameLabel" destination="tLU-Et-qao" id="DPx-CB-jBK"/>
-                        <segue destination="vae-nM-WaS" kind="unwind" identifier="userSettingVCtoVC" unwindAction="unwindToTrend:" id="E8P-Od-mf4"/>
+                        <segue destination="vae-nM-WaS" kind="unwind" identifier="userSettingVCtoVCunwind" unwindAction="unwindToTrend:" id="PbT-qv-NJH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gIg-7N-z3y" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -542,7 +542,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1096" y="-285"/>
+            <point key="canvasLocation" x="1230" y="-318"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="14v-YN-nJg">
@@ -652,7 +652,7 @@
                                 <rect key="frame" x="16" y="153" width="282" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress"/>
                                 <connections>
                                     <outlet property="delegate" destination="4SH-an-xaz" id="K86-PW-teU"/>
                                 </connections>
@@ -700,7 +700,7 @@
                                 <rect key="frame" x="16" y="86" width="282" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                 <connections>
                                     <outlet property="delegate" destination="4SH-an-xaz" id="V90-BA-75I"/>
                                 </connections>
@@ -1043,10 +1043,10 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="KcB-Ir-6tX"/>
-        <segue reference="xnA-Pc-bIb"/>
-        <segue reference="fO7-VD-hGW"/>
-        <segue reference="j8y-ny-OAp"/>
+        <segue reference="Ie9-er-xeu"/>
+        <segue reference="XKH-ik-kmo"/>
+        <segue reference="ZVg-TD-1de"/>
         <segue reference="TKa-A3-oIM"/>
+        <segue reference="fO7-VD-hGW"/>
     </inferredMetricsTieBreakers>
 </document>
