--- a/Stylist/Base.lproj/Main.storyboard
+++ b/Stylist/Base.lproj/Main.storyboard
@@ -245,7 +245,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6d5-AW-rn5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="632" y="-99"/>
+            <point key="canvasLocation" x="582" y="-173"/>
         </scene>
         <!--Profile Pic View Controller-->
         <scene sceneID="m1t-JV-MjG">
@@ -531,7 +531,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="NYy-Sj-7QC" kind="modal" id="Qrw-LC-dPS"/>
+                                    <segue destination="OTw-PF-Rpp" kind="modal" id="9ta-cj-Brq"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -1047,45 +1047,87 @@
             </objects>
             <point key="canvasLocation" x="2343" y="1349"/>
         </scene>
-        <!--Brand Search Table Controller-->
-        <scene sceneID="VtF-Tg-Cch">
+        <!--Root View Controller-->
+        <scene sceneID="56z-iW-Xni">
             <objects>
-                <tableViewController id="NYy-Sj-7QC" customClass="BrandSearchTableController" customModule="Stylist" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="QIa-eP-gVH">
+                <tableViewController id="99s-No-30Z" customClass="BrandSearchTableController" customModule="Stylist" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="NaN-cJ-eNm">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" id="POH-rB-xBp">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <items>
+                                <navigationItem title="Select a Brand" id="ahR-VJ-kf6">
+                                    <barButtonItem key="leftBarButtonItem" style="plain" id="3Pb-5u-HL9">
+                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="yTl-0V-ueL">
+                                            <rect key="frame" x="-23" y="-15" width="71" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <state key="normal" title="Button">
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <segue destination="OGb-dt-L6C" kind="modal" identifier="BrandSearchVCtoimagePreviewVC" id="pib-E4-WEA"/>
+                                            </connections>
+                                        </button>
+                                    </barButtonItem>
+                                </navigationItem>
+                            </items>
+                        </navigationBar>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="1qo-VQ-3c7">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="yEU-5Z-O4e">
+                                <rect key="frame" x="0.0" y="130" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1qo-VQ-3c7" id="G6A-nQ-RTx">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yEU-5Z-O4e" id="UbV-bf-YdQ">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="NYy-Sj-7QC" id="5f4-w0-Qjh"/>
-                            <outlet property="delegate" destination="NYy-Sj-7QC" id="BiK-mG-PDi"/>
+                            <outlet property="dataSource" destination="99s-No-30Z" id="lDW-I6-Pdn"/>
+                            <outlet property="delegate" destination="99s-No-30Z" id="xjc-BO-8dz"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="ZBz-sH-v6t"/>
-                    <connections>
-                        <outlet property="searchDisplayController" destination="o3c-0j-0IX" id="sMN-kA-ZQQ"/>
-                    </connections>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="Q4h-Ut-8cr"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="EGD-qE-IYB" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="o3c-0j-0IX">
-                    <connections>
-                        <outlet property="delegate" destination="NYy-Sj-7QC" id="sUs-63-7wh"/>
-                        <outlet property="searchContentsController" destination="NYy-Sj-7QC" id="Oiz-TO-ZOt"/>
-                        <outlet property="searchResultsDataSource" destination="NYy-Sj-7QC" id="dPn-Wt-t4M"/>
-                        <outlet property="searchResultsDelegate" destination="NYy-Sj-7QC" id="Wa7-Lg-idA"/>
-                    </connections>
-                </searchDisplayController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C17-tj-xZ0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="932" y="-982"/>
+            <point key="canvasLocation" x="1385" y="-1368"/>
+        </scene>
+        <!--Image Preview View Controller-->
+        <scene sceneID="aeZ-TT-Iq5">
+            <objects>
+                <viewController id="OGb-dt-L6C" customClass="ImagePreviewViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IoV-n3-i2f">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="OTw-PF-Rpp" kind="modal" identifier="imagePreviewVCtoBrandSearchVC" id="CbI-3P-FO4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SRy-8g-V7Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="310" y="-1504"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="yXr-k6-Rdr">
+            <objects>
+                <navigationController id="OTw-PF-Rpp" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="K22-Om-8kF">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="99s-No-30Z" kind="relationship" relationship="rootViewController" id="7h2-XT-ckn"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lev-Js-YPv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="836" y="-1504"/>
         </scene>
     </scenes>
     <resources>
@@ -1101,10 +1143,11 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="TKa-A3-oIM"/>
+        <segue reference="CbI-3P-FO4"/>
+        <segue reference="qXM-AK-tWs"/>
         <segue reference="Ie9-er-xeu"/>
         <segue reference="XKH-ik-kmo"/>
-        <segue reference="PbG-0j-NXL"/>
-        <segue reference="TKa-A3-oIM"/>
         <segue reference="BK8-ow-a7u"/>
     </inferredMetricsTieBreakers>
 </document>
